# AiTdd

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md
examples/: aitdd-self.yaml  aitdd.yaml
hooks/: aitdd_guard.py  codex_hooks.json
src/aitdd/: __init__.py  agents.py  cli.py  decision.py  hook_policy.py  planning.py  progress.py  prompts.py  review.py  runner.py  spec.py  subjects.py  testing.py
src/aitdd/application/: __init__.py  decision.py  loop.py  planning.py  prompts.py  subjects.py
src/aitdd/domain/: __init__.py  cycle.py  policy.py  spec.py
src/aitdd/infrastructure/: __init__.py  agents.py  progress.py  testing.py
src/aitdd/interfaces/: __init__.py  cli.py
tests/: test_architecture.py  test_cli.py  test_decision.py  test_hook_policy.py  test_planning.py  test_prompts.py  test_review.py  test_runner.py  test_spec.py  test_subjects.py  test_testing.py
