[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aitdd"
version = "0.1.3"
description = "A small Codex-planned, Cursor-implemented TDD loop with Codex hook guards."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "codex-hookkit>=0.0.2",
  "pyyaml>=6.0",
]

[project.scripts]
aitdd = "aitdd.cli:main"

[dependency-groups]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "ruff>=0.8",
  "twine>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/examples",
  "/hooks",
  "/src",
  "/tests",
  "/README.md",
  "/package.json",
  "/package-lock.json",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aitdd"]
